<resources>
    <string name="app_name">ERA</string>
    <string name="kenyan_emergency_service_with">Kenyan Emergency Service with</string>
    <string name="realtime_tracking">RealTime Tracking</string>

    <string name="eclipse">eclipse</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_password">Remember Password?</string>
    <string name="get_started">Get_Started</string>
    <string name="next">Next</string>
    <string name="kenyan_emergency_service_with_real_time_location_tracking">Kenyan_emergency_service_with Real Time Location Tracking</string>
    <string name="title_text">Title Text</string>
    <string name="descripton_text">Descripton Text</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="history">History</string>
    <string name="quick_report">Quick Report</string>
    <string name="todo">TODO</string>
    <string name="logo_image">logo image</string>
    <string name="quick_call">Quick call</string>

    <string name="see_all">See all</string>
    <string name="profilepicture">profilepicture</string>
    <string name="callquick">call quick</string>
    <string name="Quickreporting">Quickreporting</string>
    <string name="historynotifications" />
    <string name="videotips">videotips</string>
    <string name="articletips">articletips</string>
    <string name="already_have_an_account_sign_in">Already have an account <b> Sign In?</b></string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="emergency_tips">Emergency Tips</string>
    <string name="emergency_tips_item_android_id"><![CDATA[Emergency Tips /> <item android:id=]]></string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="dropped_pin">pinned location</string>
    <string name="report_emergency">Report Emergency</string>

    <string-array name="Choose_Emergency">
        <item> Accidents </item>
        <item> Building Collapse</item>
        <item> Fire </item>
        <item> Terror Alert</item>
        <item> Robbery with Violence</item>
        <item> Medical Health</item>

    </string-array>

</resources>