<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="tabs"
    tools:context=".Homepage">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="168dp"

        android:contentDescription="@string/todo"

        android:src="@drawable/home_background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="109dp"
                android:layout_height="115dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/callquick"
                    android:onClick="addFragOnClick"
                    android:src="@drawable/callquick" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/quick_call"
                    android:textColor="@color/red"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="116dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reportingbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/Quickreporting"
                    android:onClick="addFragOnClick"
                    android:src="@drawable/quickreportimage" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/quick_report"
                    android:textColor="@color/red"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="117dp"
                android:layout_height="119dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/historybutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/historynotifications"
                    android:onClick="addFragOnClick"
                    android:src="@drawable/historyimage" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/history"
                    android:textColor="@color/red"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/emergency_tips"
        android:textSize="18dp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="194dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="308dp"
        android:text="@string/see_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.654" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/videotips"

        android:onClick="addFragOnClick"
        android:src="@drawable/videotips"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="91dp"
        android:layout_height="76dp"
        android:contentDescription=" @string/articletips"
        android:onClick="addFragOnClick"

        android:src="@drawable/tipsanduppdatespage"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="559dp" />


</androidx.constraintlayout.widget.ConstraintLayout>