<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHomeConnection">


    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="@drawable/indicator_active_background"
   />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_below="@id/linearLayout3"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/indicator_active_background"
         />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="431dp"
        android:layout_height="163dp"


        android:contentDescription="@string/todo"
        android:src="@drawable/home_background" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_below="@id/imageView7"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="109dp"
            android:layout_height="115dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/quickcall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/callquick"

                android:src="@drawable/callquick" />

            <TextView
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/quick_call"
                android:textColor="@color/red"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="116dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/reportingbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"

                android:contentDescription="@string/Quickreporting"

                android:src="@drawable/quickreportimage" />

            <TextView
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/quick_report"
                android:textColor="@color/red"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="117dp"
            android:layout_height="119dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/historybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"

                android:contentDescription="@string/historynotifications"

                android:src="@drawable/historyimage"
                 />

            <TextView
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/history"
                android:textColor="@color/red"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="147dp"
        android:layout_height="23dp"
        android:layout_below="@id/divider2"
        android:layout_toEndOf="@id/videotips"
        android:layout_marginStart="11dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="60dp"
        android:text="Video Emergency Tips" />

    <ImageButton
        android:id="@+id/videotips"
        android:layout_width="93dp"
        android:layout_height="96dp"
        android:layout_below="@id/divider2"
        android:layout_marginStart="16dp"


        android:layout_marginEnd="11dp"
        android:contentDescription="@string/videotips"
        android:src="@drawable/videotips" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_below="@id/videotips"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/indicator_active_background" />

    <ImageView
        android:id="@+id/mapviewimage"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/divider"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="6dp"

        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="11dp"
        android:layout_toEndOf="@id/mapviewimage"
        android:text="View Current Location" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mapviewimage"
        android:layout_marginStart="12dp"

        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:src="@drawable/pinksettings"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/getReportPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Report Emergency" />

    <Button
        android:id="@+id/getEmergencytips"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="Check Tips" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView7"


        android:text="TextView" />

</RelativeLayout>